# younotgonnasleepwelltoday

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
content/: cell.aseprite  cross.aseprite
src/: README.md  config.hpp  defines.hpp  main.cpp
src/engine/: core.cpp  core.hpp  defines.hpp  ecs.cpp  ecs.hpp  profiling.cpp  profiling.hpp  resources.cpp  resources.hpp
